# synto

./: .env  .env.example  .gitignore  AGENT-REGISTRY.yaml  ARCHITECTURE.md  CONFIGURATION.md  DEFINICION-AGENTES.md  DOCUMENTATION-AUDIT.md  GUIA-MAESTRA.md  IMPLEMENTATION-PLAN.md  LANGGRAPH-ARCHITECTURE.md  MEMORY-ARCHITECTURE-RESEARCH.md  MEMORY-MCP-ARCHITECTURE.md  PERSISTENT-MEMORY-SPEC.md  README.md  SDD-WORKFLOW.md  SHARED-STATE-SPEC.md  SKILL-LOADING-SYSTEM.md  USER-GUIDE.md  WEB-INTERFACE-VISION.md  hermes_agency.py  pyproject.toml
agents/prompts/: cross-context-manager.md  cross-dependency-checker.md  cross-documentation.md  cross-qa-gatekeeper.md  cross-security.md  orchestrator-code.md  orchestrator-content.md  orchestrator-data.md  orchestrator-devops.md  orchestrator-main.md  orchestrator-research.md  specialist-analyst.md  specialist-architect.md  specialist-builder.md  specialist-editor.md  specialist-explorer.md  specialist-implementer.md  specialist-interview.md  specialist-planner.md  specialist-project-init.md  specialist-project-initializer.md  specialist-requirements.md  specialist-reviewer.md  specialist-seo.md  specialist-tdd.md  (+7 more)
config/: __init__.py  agent-skill-map.yaml  code-agent-runtime.yaml  model_resolver.py  models.yaml
docs/: CODE-AGENTS-AND-OPENCODE-RUNNER.md  NEW-PROJECT-FLOW-DESIGN.md  OPENCODE-RUNNER-IMPLEMENTATION-PLAN.md  desktop-tauri.md
scripts/: ejemplo_code.sh  init-project.sh  init.sh  run-deploy.sh  run-discovery.sh  run-implementation.sh  run-planning.sh  run-sdd.sh  run-testing.sh  run.sh
tests/: test_cli.py  test_e2e.py
(+107 files in other folders)
