[project]
name = "synto"
version = "0.1.0"
description = "Multi-layer AI agent orchestration system with LangGraph, MCP, and persistent memory"
requires-python = ">=3.12"

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlite-fts4>=1.0",
    "mcp>=1.0",
    "fastmcp>=0.4.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "aiofiles>=24.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[project.scripts]
synto = "synto.cli:main"

[tool.black]
line-length = 88
target-version = ["py312"]
